# stellar-intel

./: .gitignore  commitlint.config.mjs  maintainer.md  package-lock.json  package.json  vitest.config.mts
.deployments/: testnet.json
app/: globals.css  layout.tsx  opengraph-image.tsx  page.tsx
app/offramp/: page.tsx
components/anchors/: AnchorCard.tsx
components/landing/: FeatureGrid.tsx  Hero.tsx
components/layout/: TestnetBanner.tsx
components/offramp/: ExecuteDrawer.tsx  Leaderboard.tsx  RateTable.tsx  ScorecardCard.tsx  SortToggle.tsx  StatusTracker.tsx
components/ui/: AmountInput.tsx  CorridorSelector.tsx  QuotePill.tsx  WalletButton.tsx
constants/: anchor-health.json  anchors.ts  index.ts
crates/stellar-intel-reputation/: Cargo.toml
crates/stellar-intel-reputation/src/: lib.rs
crates/stellar-intel-reputation/tests/: integration.rs
docs/: ORACLE_SPEC.md
examples/consumer-contract/: Cargo.toml
examples/consumer-contract/src/: lib.rs
hooks/: useAnchorRates.ts
lib/: logger.ts  metrics.ts  sort.ts
lib/api/: rates-cache.ts
lib/errors/: messages.ts
lib/reputation/: aggregate.ts  postgres.ts  probe.ts  sqlite.ts  store.ts
lib/stellar/: anchors.ts  (+7 more)
scripts/: anchor-survey.mjs  deploy-oracle-testnet.ts  validate-anchors.mjs
tests/: anchor-500.spec.ts  anchors.invariants.spec.ts  anchors.ntokens.spec.ts  directory.spec.mjs  rates-cache.spec.ts  reputation-store.spec.ts  sep1.domains.spec.ts  sep1.fixture.spec.ts  sep1.spec.ts  sep12.spec.ts  sep6.spec.ts  server-rates.degrade.spec.ts  validate-anchors.spec.mjs
types/: index.ts
(+15 files in other folders)
