[package]
name = "stellar-intel-reputation"
version = "0.1.0"
edition = "2021"
description = "Thin Soroban read SDK for the Stellar Intel reputation oracle"
license = "MIT"
publish = true

[lib]
name = "stellar_intel_reputation"
path = "src/lib.rs"
doctest = false

[dependencies]
soroban-sdk = "22.0.0"

[dev-dependencies]
soroban-sdk = { version = "22.0.0", features = ["testutils"] }
